<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    tools:context=".OrderDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#000000"
                android:backgroundTint="#000000"
                app:layout_constraintBottom_toTopOf="@+id/name_client"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/back_change_password"
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/back"
                    android:foregroundTint="#eeeeee"
                    android:onClick="clickToBack"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    app:tint="#eeeeee" />

            </FrameLayout>


            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details"
                tools:layout_editor_absoluteX="37dp">

                <Button
                    android:id="@+id/order_decline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:backgroundTint="#752f37"
                    android:text="@string/decline"
                    android:textColor="#fff"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/order_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:backgroundTint="#752f37"
                    android:text="@string/accept"
                    android:textColor="#fff"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>

            <TextView
                android:id="@+id/name_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:autofillHints=""
                android:background="#e4e4e4"
                android:backgroundTint="#e4e4e4"
                android:ems="10"
                android:hint="@string/name_client"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#555"
                android:textColorHint="#555"
                app:layout_constraintBottom_toTopOf="@+id/phone_client"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:onClick="clickToCall"
                android:clickable="true"
                android:id="@+id/phone_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:autofillHints=""
                android:background="#e4e4e4"
                android:backgroundTint="#e4e4e4"
                android:ems="10"
                android:hint="@string/phone_number_client"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#555"
                android:textColorHint="#555"
                app:layout_constraintBottom_toTopOf="@+id/location_client"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_client"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:onClick="clickToMap"
                android:clickable="true"
                android:id="@+id/location_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:autofillHints=""
                android:background="#e4e4e4"
                android:backgroundTint="#e4e4e4"
                android:ems="10"
                android:hint="@string/location_client"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#555"
                android:textColorHint="#555"
                app:layout_constraintBottom_toTopOf="@+id/details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_client"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="302dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:autofillHints=""
                android:background="#e4e4e4"
                android:backgroundTint="#e4e4e4"
                android:ems="10"
                android:hint="@string/details"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#555"
                android:textColorHint="#555"
                app:layout_constraintBottom_toTopOf="@+id/tableRow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_client"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>