<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#efefef"
tools:context=".ui.MyOrdersDetails">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="40dp" />

                        <TextView
                            android:id="@+id/name_client"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:autofillHints=""
                            android:background="#e4e4e4"
                            android:backgroundTint="#e4e4e4"
                            android:ems="10"
                            android:hint="@string/name_client"
                            android:minHeight="48dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="#555"
                            android:textColorHint="#555"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/phone_client"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="30dp"
                            android:autofillHints=""
                            android:background="#e4e4e4"
                            android:backgroundTint="#e4e4e4"
                            android:clickable="true"
                            android:ems="10"
                            android:hint="@string/phone_number_client"
                            android:minHeight="48dp"
                            android:onClick="clickToCall"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="#555"
                            android:textColorHint="#555"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/location_client"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="30dp"
                            android:autofillHints=""
                            android:background="#e4e4e4"
                            android:backgroundTint="#e4e4e4"
                            android:clickable="true"
                            android:ems="10"
                            android:hint="@string/location_client"
                            android:minHeight="48dp"
                            android:onClick="clickToMap"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="#555"
                            android:textColorHint="#555"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/details"
                            android:layout_width="match_parent"
                            android:layout_height="302dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="30dp"
                            android:autofillHints=""
                            android:background="#e4e4e4"
                            android:backgroundTint="#e4e4e4"
                            android:ems="10"
                            android:hint="@string/details"
                            android:minHeight="48dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="#555"
                            android:textColorHint="#555"
                            tools:ignore="TextContrastCheck" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/order_delivering"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginEnd="30dp"
                                android:backgroundTint="#752f37"
                                android:onClick="clickToDelivering"
                                android:text="@string/delivering"
                                android:textColor="#fff"
                                tools:ignore="TextContrastCheck" />

                            <Button
                                android:id="@+id/order_complete"
                                style="?android:attr/buttonBarButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginEnd="30dp"
                                android:backgroundTint="#752f37"
                                android:onClick="clickToComplete"
                                android:text="@string/complete"
                                android:textColor="#fff"
                                tools:ignore="TextContrastCheck" />


                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>